--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -138,6 +138,9 @@
     <GenerateManifests>false</GenerateManifests>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Devsense.PHP.Phar, Version=1.0.0.0, Culture=neutral, PublicKeyToken=5b4bee2bf1f98593, processorArchitecture=MSIL">
+      <HintPath>..\packages\Devsense.PHP.Phar.1.0.15\lib\net45\Devsense.PHP.Phar.dll</HintPath>
+    </Reference>
     <Reference Include="DropDownControls, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\References\DropDownControls.dll</HintPath>
@@ -161,7 +164,7 @@
       <HintPath>..\packages\NBT_Library.1.7.0\lib\net451\NBT.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.12.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <HintPath>..\packages\Newtonsoft.Json.12.0.3-beta1\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NoIP.DDNS.Merged, Version=1.1.0.1, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -209,6 +212,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationEvents.vb" />
+    <Compile Include="Charcoal\PocketMinePluginManager.Designer.vb">
+      <DependentUpon>PocketMinePluginManager.vb</DependentUpon>
+    </Compile>
+    <Compile Include="Charcoal\PocketMinePluginManager.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Charcoal\ModpackExplorer.Designer.vb">
       <DependentUpon>ModpackExplorer.vb</DependentUpon>
     </Compile>
@@ -286,6 +295,7 @@
     <Compile Include="Classes\MinecraftLogParser.vb" />
     <Compile Include="Classes\MinecraftUUIDProvider.vb" />
     <Compile Include="Classes\ModPack Server\ModPackServer.vb" />
+    <Compile Include="Classes\PocketMinePluginUnpatcher.vb" />
     <Compile Include="Classes\Server\AkarinOptions.vb" />
     <Compile Include="Classes\Server\BukkitOptions.vb" />
     <Compile Include="Classes\Server\CauldronOptions.vb" />
@@ -524,6 +534,9 @@
     <None Include="ServerManager_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="Charcoal\PocketMinePluginManager.resx">
+      <DependentUpon>PocketMinePluginManager.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Charcoal\ModpackExplorer.resx">
       <DependentUpon>ModpackExplorer.vb</DependentUpon>
     </EmbeddedResource>
@@ -727,7 +740,7 @@ mkdir Merged\
 echo on
 IF EXIST C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe (
         echo Starting ILMerge...
-        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll HtmlRenderer.dll HtmlRenderer.WinForms.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll DropDownControls.dll NBT.dll
+        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll HtmlRenderer.dll HtmlRenderer.WinForms.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll DropDownControls.dll NBT.dll Devsense.PHP.Phar.dll
     ) ELSE (
 echo missing ILMerge , please install MCSMPack.
 )
