--- a/ServerManager/packages.config
+++ b/ServerManager/packages.config
@@ -4,6 +4,7 @@
   <package id="HtmlAgilityPack" version="1.11.12" targetFramework="net452" />
   <package id="HtmlRenderer.Core" version="1.5.1-beta1" targetFramework="net45" />
   <package id="HtmlRenderer.WinForms" version="1.5.1-beta1" targetFramework="net45" />
+  <package id="MetroModernUI" version="1.4.0.0" targetFramework="net452" />
   <package id="Microsoft.Build.Tasks.Git" version="1.0.0-beta-63102-01" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net452" developmentDependency="true" />
   <package id="NBT_Library" version="1.7.0" targetFramework="net452" />
