--- a/.gitignore
+++ b/.gitignore
@@ -349,3 +349,4 @@ MigrationBackup/
 
 # End of https://www.gitignore.io/api/visualstudio
 /ServerManager/Release_WinTest
+/ServerManager/ReleaseUniversal
