Server Rebase-ing

--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -306,6 +306,10 @@
     <Compile Include="Classes\MinecraftUUIDProvider.vb" />
     <Compile Include="Classes\ModPack Server\ModPackServer.vb" />
     <Compile Include="Classes\PocketMinePluginUnpatcher.vb" />
+    <Compile Include="Classes\Rebase Server\Memoryable.vb" />
+    <Compile Include="Classes\Rebase Server\ServerBase.vb" />
+    <Compile Include="Classes\Rebase Server\ServerMaker.vb" />
+    <Compile Include="Classes\Rebase Server\Taskable.vb" />
     <Compile Include="Classes\Server\AkarinOptions.vb" />
     <Compile Include="Classes\Server\BukkitOptions.vb" />
     <Compile Include="Classes\Server\CauldronOptions.vb" />
