--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -300,6 +300,8 @@
       <SubType>UserControl</SubType>
     </Compile>
     <Compile Include="Charcoal\SpongeForgeProvider.vb" />
+    <Compile Include="Classes.rebase\Server\IllegalServerVersionException.vb" />
+    <Compile Include="Classes.rebase\Server\GetServerException.vb" />
     <Compile Include="Classes.rebase\Server\GetAvailableVersionsException.vb" />
     <Compile Include="Classes.rebase\Server\VersionListLoader.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordHost.vb" />
