Add IBukkit,IForge,ProcessMessageHub(W.I.P),ServerAddons. Edit AkarinServer,CraftBukkitServer.

--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -304,8 +304,13 @@
     <Compile Include="Classes.rebase\Server\GetServerException.vb" />
     <Compile Include="Classes.rebase\Server\GetAvailableVersionsException.vb" />
     <Compile Include="Classes.rebase\Server\InternalSoftwareStartup.vb" />
+    <Compile Include="Classes.rebase\Server\ProcessMessageHub.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\AkarinServer.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\IBukkit.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\IForge.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\PaperServer.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\SpigotWithGitServer.vb" />
+    <Compile Include="Classes.rebase\Server\ServerAddons.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\SpigotServer.vb" />
     <Compile Include="Classes.rebase\Server\VersionListLoader.vb" />
     <Compile Include="Classes\Intergrate Solution Server\BungeeCord\BungeeCordHost.vb" />
