--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -707,6 +707,9 @@
     <None Include="MapSolutionResources\Luck.png" />
     <None Include="MapSolutionResources\Madness.png" />
     <None Include="MapSolutionResources\Worldwater.png" />
+    <None Include="Linux Mono DLL\Microsoft.VisualBasic.dll">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <Content Include="normalProgram.ico" />
     <None Include="ILMergeCommand.txt" />
     <None Include="Resources\ServerDefaultIcon.png" />
@@ -739,7 +742,7 @@ mkdir Merged\
 echo on
 IF EXIST C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe (
         echo Starting ILMerge...
-        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll HtmlRenderer.dll HtmlRenderer.WinForms.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll NBT.dll Devsense.PHP.Phar.dll
+        C:\PROGRA~2\Microsoft\ILMerge\ILMerge.exe /log:  /t:winexe /ndebug  /targetplatform:"v4,c:\windows\Microsoft.NET\Framework\v4.0.30319" /out:Merged\$(TargetFileName) $(TargetFileName) HtmlAgilityPack.dll Newtonsoft.Json.dll NATUPnP.dll HtmlRenderer.dll HtmlRenderer.WinForms.dll YamlDotNet.dll NoIP.DDNS.Merged.dll System.ValueTuple.dll NBT.dll Devsense.PHP.Phar.dll "Linux Mono DLL\Microsoft.VisualBasic.dll"
     ) ELSE (
 echo missing ILMerge , please install MCSMPack.
 )
