+BDSServer,NukkitServer,PocketMineServer (W.I.P.)

--- a/ServerManager/ServerManager.vbproj
+++ b/ServerManager/ServerManager.vbproj
@@ -309,13 +309,16 @@
     <Compile Include="Classes.rebase\Server\InternalSoftwareStartup.vb" />
     <Compile Include="Classes.rebase\Server\ProcessMessageHub.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\AkarinServer.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\BDSServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\CauldronServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\ContigoServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\ForgeServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IBukkit.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\Interfaces\IForge.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\KettleServer.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\NukkitServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\PaperServer.vb" />
+    <Compile Include="Classes.rebase\Server\Server Softwares\PocketMineServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\SpigotWithGitServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\SpongeVanillaServer.vb" />
     <Compile Include="Classes.rebase\Server\Server Softwares\ThermosServer.vb" />
